# audio_recorder

./: .gitignore  pubspec.yaml
android/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  MP3Recorder.cpp
android/src/main/cpp/lamemp3/: id3tag.c  machine.h
android/src/main/java/com/jordanalcaraz/audiorecorder/audiorecorder/: AudioRecorderPlugin.java  WavRecorder.java
android/src/main/java/com/vickyleu/audiorecorder/: AudioRecorderPlugin.java  MP3Recorder.java  WavRecorder.java
example/android/app/: build.gradle
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
ios/: audio_recorder.podspec
ios/Classes/: SwiftAudioRecorderPlugin.swift
ios/Frameworks/lame.framework/: lame
lib/: audio_recorder.dart  main.dart
